--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,7 @@
 Small weather app to experiment with [OpenWeatherMap's API](http://openweathermap.org/)
 
 *************
-Current status of the web app: [deployment on heroku](https://agile-plains-7113.herokuapp.com/)
+Current status of the web app: [deployment on heroku](https://limitless-escarpment-6817.herokuapp.com/)
 
 *************
 
